# avalos_intera

./: .gitignore  CMakeLists.txt  README.rst  package.xml  previo_final.py
aws-utec-iot/: basicinfo.py  josebasic.py  prueba_python.cert.pem  prueba_python.private.key  prueba_python.public.key  start.sh
ibm-utec-iot/: device.conf  deviceClient.py  iot_sender.py  joint-state.py  listener.py  sending_data.py  setup.sh
ibm-utec-iot/ui/: .cfignore  README.md  app.js  manifest.yml  package-lock.json  package.json
ibm-utec-iot/ui/public/: previous_index.html
ibm-utec-iot/web_nodejs_iot/: app.js  manifest.yml  package-lock.json  package.json
ibm-utec-iot/web_nodejs_iot/config/: default.json
ibm-utec-iot/web_nodejs_iot/public/: basic.html  index.html  prueba.html  (+1 more)
msg/: robot_q.msg
process_img/: avalos.py  border_image.py  border_video.py  cuatro.py  dos (copy).py  dos.py  hough.py  package.xml  tres.py
scripts/test/: 2_graficador.m  2_graficador.m~  2_trajectory.py  3_trajectory.py  4_trajectory.py  5_trajectory.py  IK_data.txt  IKvsSp.m  IKvsSp.m~  S_data.txt  angulos.py  avalos_sawyer.py  calculos  cs.py  data_recibed.txt  data_recived.txt  graficador.m  graficador_2  ik_service_client.py  moveit.py  new_topic.py  optimizador.py  prueba.py  prueba_2.py  prueba_3.py  prueba_spline.py  record_data.py  save_data.txt  save_data_a.txt  save_data_p.txt  save_data_v.txt  save_data_y.txt  save_real_data.txt  testfle.txt  trajectory.py  xs_ys.txt  xs_ys_0.3.txt
tmp/web_ingles_03_08/: mkdocs.yml
web_tesis/: mkdocs.yml
web_tesis/site/: index.html  sitemap.xml
(+602 files in other folders)
